11/11/08 - #944, delete PhetControlPanel that was adding an extra logo and help button (resulting in 2 of each)
# 1.05.04 (26045)
11/11/08 - #943, remove "Vector" and "Scalar" view options
10/14/08 - extend PiccoloModule so we get new-style clock controls, add piccolo-phet build dependency
10/14/08 - delete vestigial data directory for local copy of phetcommon
10/8/08 - change to use new PhetApplicationConfig constructor
# 1.05.03 (25043)
9/25/08 - [562] complete port to trunk version of phetcommon
9/18/08 - [562] begin port to trunk version of phetcommon
9/18/08 - begin tracking changes in this CHANGES.txt file
<note: unknown changes may have occurred between version 1.05.02 and 9/19/08>
# 1.05.02